@@ -33,15 +33,15 @@ public class FileUtilsTest {
     }
 
     @Test
-    void testReadUtf8StringFile(@TempDir Path tempDir) throws IOException {
-        Path path = tempDir.resolve("test2.txt");
+    void testReadUtf8StringFile(@TempDir Path tempDirPath) throws IOException {
+        Path path = tempDirPath.resolve("test2.txt");
         Files.write(path, "abc".getBytes());
         assertEquals("abc", FileUtils.readUTF8String(path));
     }
 
     @Test
-    void testDeleteOnExitAndReleaseTempFile(@TempDir Path tempDir) throws IOException {
-        Path path = tempDir.resolve("deleteOnExit.txt");
+    void testDeleteOnExitAndReleaseTempFile(@TempDir Path tempDirPath) throws IOException {
+        Path path = tempDirPath.resolve("deleteOnExit.txt");
         Files.createFile(path);
         FileUtils.deleteOnExit(path);
         FileUtils.releaseTempFile(path);
@@ -49,58 +49,58 @@ public class FileUtilsTest {
     }
 
     @Test
-    void testDeleteFileOrDirectory(@TempDir Path tempDir) throws IOException {
-        Path dir = tempDir.resolve("dir");
-        Files.createDirectory(dir);
-        Path file = dir.resolve("file.txt");
-        Files.createFile(file);
-        FileUtils.deleteFileOrDirectory(dir);
-        assertThat(file).doesNotExist();
+    void testDeleteFileOrDirectory(@TempDir Path tempDirPath) throws IOException {
+        Path dirPath = tempDirPath.resolve("dir");
+        Files.createDirectory(dirPath);
+        Path filePath = dirPath.resolve("file.txt");
+        Files.createFile(filePath);
+        FileUtils.deleteFileOrDirectory(dirPath);
+        assertThat(filePath).doesNotExist();
     }
 
     @Test
-    void testDeleteFileOrDirectoryWithComplexDirectory(@TempDir Path tempDir) throws IOException {
+    void testDeleteFileOrDirectoryWithComplexDirectory(@TempDir Path tempDirPath) throws IOException {
         // Setup complex nested directories and files
-        Path subDir1 = tempDir.resolve("subDir1");
-        Path subDir2 = tempDir.resolve("subDir2");
-        Files.createDirectories(subDir1);
-        Files.createDirectories(subDir2);
+        Path subDirPath1 = tempDirPath.resolve("subDir1");
+        Path subDirPath2 = tempDirPath.resolve("subDir2");
+        Files.createDirectories(subDirPath1);
+        Files.createDirectories(subDirPath2);
 
         // Create files at multiple levels
-        Files.writeString(tempDir.resolve("rootFile.txt"), "root");
-        Files.writeString(subDir1.resolve("file1.txt"), "file1");
-        Files.writeString(subDir1.resolve("file2.txt"), "file2");
-        Files.writeString(subDir2.resolve("file3.txt"), "file3");
+        Files.writeString(tempDirPath.resolve("rootFile.txt"), "root");
+        Files.writeString(subDirPath1.resolve("file1.txt"), "file1");
+        Files.writeString(subDirPath1.resolve("file2.txt"), "file2");
+        Files.writeString(subDirPath2.resolve("file3.txt"), "file3");
 
-        Path nested = subDir2.resolve("nested");
-        Files.createDirectory(nested);
-        Files.writeString(nested.resolve("nestedFile.txt"), "nested");
+        Path nestedPath = subDirPath2.resolve("nested");
+        Files.createDirectory(nestedPath);
+        Files.writeString(nestedPath.resolve("nestedFile.txt"), "nested");
 
         // Ensure files exist before deletion
-        assertThat(tempDir.resolve("rootFile.txt")).exists();
-        assertThat(subDir1.resolve("file1.txt")).exists();
-        assertThat(nested.resolve("nestedFile.txt")).exists();
+        assertThat(tempDirPath.resolve("rootFile.txt")).exists();
+        assertThat(subDirPath1.resolve("file1.txt")).exists();
+        assertThat(nestedPath.resolve("nestedFile.txt")).exists();
 
         // Perform recursive delete
-        FileUtils.deleteFileOrDirectory(tempDir);
+        FileUtils.deleteFileOrDirectory(tempDirPath);
 
         // Assert everything is deleted
-        assertThat(tempDir).doesNotExist();
-        assertThat(subDir1).doesNotExist();
-        assertThat(nested).doesNotExist();
+        assertThat(tempDirPath).doesNotExist();
+        assertThat(subDirPath1).doesNotExist();
+        assertThat(nestedPath).doesNotExist();
     }
 
     @Test
-    void testDeleteFileAndWait(@TempDir Path tempDir) throws IOException, InterruptedException {
-        Path path = tempDir.resolve("wait.txt");
+    void testDeleteFileAndWait(@TempDir Path tempDirPath) throws IOException, InterruptedException {
+        Path path = tempDirPath.resolve("wait.txt");
         Files.createFile(path);
         FileUtils.deleteFileAndWait(path, 1000);
         assertThat(path).doesNotExist();
     }
 
     @Test
-    void testWaitUntilFileExists(@TempDir Path tempDir) throws InterruptedException, TimeoutException {
-        Path path = tempDir.resolve("waitExists.txt");
+    void testWaitUntilFileExists(@TempDir Path tempDirPath) throws InterruptedException, TimeoutException {
+        Path path = tempDirPath.resolve("waitExists.txt");
         new Thread(() -> {
             try {
                 Thread.sleep(200);
@@ -113,58 +113,58 @@ public class FileUtilsTest {
     }
 
     @Test
-    void testCreateTempDir() throws IOException {
-        Path temp = FileUtils.createTempDir();
-        assertTrue(Files.isDirectory(temp));
+    void testCreateTempDirPath() throws IOException {
+        Path tempPath = FileUtils.createTempDirPath();
+        assertTrue(Files.isDirectory(tempPath));
         // Clean up
-        FileUtils.deleteFileOrDirectory(temp);
+        FileUtils.deleteFileOrDirectory(tempPath);
     }
 
     @Test
-    void testListFilesInDirectory(@TempDir Path tempDir) throws IOException {
-        Path dir = tempDir.resolve("listdir");
-        Files.createDirectory(dir);
-        Files.createFile(dir.resolve("a.txt"));
-        Files.createFile(dir.resolve("b.txt"));
-        Set<String> files = FileUtils.listFilesInDirectory(dir, 1);
+    void testListRegularFilesInDirectory(@TempDir Path tempDirPath) throws IOException {
+        Path dirPath = tempDirPath.resolve("listdir");
+        Files.createDirectory(dirPath);
+        Files.createFile(dirPath.resolve("a.txt"));
+        Files.createFile(dirPath.resolve("b.txt"));
+        Set<String> files = FileUtils.listFilesInDirectory(dirPath, 1);
         assertTrue(files.contains("a.txt"));
         assertTrue(files.contains("b.txt"));
     }
 
     @Test
-    void testRenameFileOverExistingFile(@TempDir Path tempDir) throws IOException {
+    void testRenameFileOverExistingFile(@TempDir Path tempDirPath) throws IOException {
         // Create the source file
-        Path sourceFile = tempDir.resolve("source.txt");
-        Files.writeString(sourceFile, "Hello source");
+        Path sourceFilePath = tempDirPath.resolve("source.txt");
+        Files.writeString(sourceFilePath, "Hello source");
 
         // Create the target file that already exists
-        Path targetFile = tempDir.resolve("target.txt");
-        Files.writeString(targetFile, "Existing target");
+        Path targetFilePath = tempDirPath.resolve("target.txt");
+        Files.writeString(targetFilePath, "Existing target");
 
         // Perform the rename (should overwrite existing target)
-        boolean success = FileUtils.renameFile(sourceFile, targetFile);
+        boolean success = FileUtils.renameFile(sourceFilePath, targetFilePath);
 
         assertTrue(success, "Rename should succeed");
 
         // Source file should no longer exist
-        assertFalse(Files.exists(sourceFile), "Source file should be deleted");
+        assertFalse(Files.exists(sourceFilePath), "Source file should be deleted");
 
         // Target file should exist and contain the source content
-        assertTrue(Files.exists(targetFile), "Target file should exist");
-        String content = Files.readString(targetFile);
+        assertTrue(Files.exists(targetFilePath), "Target file should exist");
+        String content = Files.readString(targetFilePath);
         assertEquals("Hello source", content, "Target file should have the source content");
     }
 
     @Test
-    void testWriteToFile(@TempDir Path tempDir) throws IOException {
-        Path path = tempDir.resolve("writefile.txt");
-        FileUtils.writeToFile("data", path);
+    void testWriteToPath(@TempDir Path tempDirPath) throws IOException {
+        Path path = tempDirPath.resolve("writefile.txt");
+        FileUtils.writeToPath("data", path);
         assertEquals("data", Files.readString(path));
     }
 
     @Test
-    void testReadFromFileIfPresent(@TempDir Path tempDir) throws IOException {
-        Path path = tempDir.resolve("present.txt");
+    void testReadFromFileIfPresent(@TempDir Path tempDirPath) throws IOException {
+        Path path = tempDirPath.resolve("present.txt");
         Files.write(path, "abc".getBytes());
         Optional<String> result = FileUtils.readFromFileIfPresent(path);
         assertTrue(result.isPresent());
@@ -185,19 +185,19 @@ public class FileUtilsTest {
     }
 
     @Test
-    void testResourceToFile(@TempDir Path tempDir) throws IOException {
-        Path path = tempDir.resolve("resource.txt");
+    void testResourceToFile(@TempDir Path tempDirPath) throws IOException {
+        Path path = tempDirPath.resolve("resource.txt");
         FileUtils.resourceToFile("logback.xml", path);
         assertThat(path).exists();
     }
 
     @Test
-    void testCopyFile(@TempDir Path tempDir) throws IOException {
-        Path src = tempDir.resolve("src.txt");
-        Path dest = tempDir.resolve("dest.txt");
-        Files.write(src, "copy".getBytes());
-        FileUtils.copyFile(src, dest);
-        assertEquals("copy", Files.readString(dest));
+    void testCopyFile(@TempDir Path tempDirPath) throws IOException {
+        Path srcPath = tempDirPath.resolve("src.txt");
+        Path destPath = tempDirPath.resolve("dest.txt");
+        Files.write(srcPath, "copy".getBytes());
+        FileUtils.copyFile(srcPath, destPath);
+        assertEquals("copy", Files.readString(destPath));
     }
 
     @Test
@@ -209,22 +209,22 @@ public class FileUtilsTest {
     }
 
     @Test
-    void testListDirectories(@TempDir Path tempDir) throws IOException {
-        Path dir = tempDir.resolve("listdirs");
-        Files.createDirectory(dir);
+    void testListDirectories(@TempDir Path tempDirPath) throws IOException {
+        Path dirPath = tempDirPath.resolve("listdirs");
+        Files.createDirectory(dirPath);
 
         // Create subdirectories
-        Path sub1 = dir.resolve("subdir1");
-        Path sub2 = dir.resolve("subdir2");
-        Files.createDirectory(sub1);
-        Files.createDirectory(sub2);
+        Path subPath1 = dirPath.resolve("subdir1");
+        Path subPath2 = dirPath.resolve("subdir2");
+        Files.createDirectory(subPath1);
+        Files.createDirectory(subPath2);
 
         // Create a file to ensure it is not included
-        Path file = dir.resolve("file.txt");
-        Files.createFile(file);
+        Path filePath = dirPath.resolve("file.txt");
+        Files.createFile(filePath);
 
         // Call method under test
-        Set<String> dirs = FileUtils.listDirectories(dir);
+        Set<String> dirs = FileUtils.listDirectories(dirPath);
 
         // Assertions
         assertEquals(2, dirs.size(), "Should only contain 2 directories");
@@ -234,9 +234,9 @@ public class FileUtilsTest {
     }
 
     @Test
-    void testRenameFile(@TempDir Path tempDir) throws IOException {
-        Path oldPath = tempDir.resolve("old.txt");
-        Path newPath = tempDir.resolve("new.txt");
+    void testRenameFile(@TempDir Path tempDirPath) throws IOException {
+        Path oldPath = tempDirPath.resolve("old.txt");
+        Path newPath = tempDirPath.resolve("new.txt");
         Files.write(oldPath, "rename".getBytes());
         assertTrue(FileUtils.renameFile(oldPath, newPath));
         assertTrue(Files.exists(newPath));
@@ -244,13 +244,13 @@ public class FileUtilsTest {
     }
 
     @Test
-    void testBackupCorruptedFile(@TempDir Path tempDir) throws IOException {
-        Path dir = tempDir.resolve("backup");
-        Files.createDirectory(dir);
-        Path path = dir.resolve("corrupt.txt");
-        Files.write(path, "data".getBytes());
-        FileUtils.backupCorruptedFile(dir, path, "corrupt.txt", "backup");
-        Set<String> files = FileUtils.listFiles(dir.resolve("backup"));
+    void testBackupCorruptedFile(@TempDir Path tempDirPath) throws IOException {
+        Path backupPath = tempDirPath.resolve("backup");
+        Files.createDirectory(backupPath);
+        Path corruptPath = backupPath.resolve("corrupt.txt");
+        Files.write(corruptPath, "data".getBytes());
+        FileUtils.backupCorruptedFile(backupPath, corruptPath, "corrupt.txt", "backup");
+        Set<String> files = FileUtils.listRegularFiles(backupPath.resolve("backup"));
         assertTrue(files.stream().anyMatch(f -> f.startsWith("corrupt.txt_at_")));
     }
 
@@ -261,15 +261,15 @@ public class FileUtilsTest {
     }
 
     @Test
-    void testCopyDirectoryWithExtensionsToSkip(@TempDir Path tempDir) throws IOException {
-        Path srcDir = tempDir.resolve("srcdir2");
-        Path destDir = tempDir.resolve("destdir2");
-        Files.createDirectory(srcDir);
-        Files.write(srcDir.resolve("file.txt"), "abc".getBytes());
-        Files.write(srcDir.resolve("file.skip"), "skip".getBytes());
-        FileUtils.copyDirectory(srcDir, destDir, Set.of("skip"));
-        assertTrue(Files.exists(destDir.resolve("file.txt")));
-        assertFalse(Files.exists(destDir.resolve("file.skip")));
+    void testCopyDirectoryWithExtensionsToSkip(@TempDir Path tempDirPath) throws IOException {
+        Path srcDirPath = tempDirPath.resolve("srcdir2");
+        Path destDirPath = tempDirPath.resolve("destdir2");
+        Files.createDirectory(srcDirPath);
+        Files.write(srcDirPath.resolve("file.txt"), "abc".getBytes());
+        Files.write(srcDirPath.resolve("file.skip"), "skip".getBytes());
+        FileUtils.copyDirectory(srcDirPath, destDirPath, Set.of("skip"));
+        assertTrue(Files.exists(destDirPath.resolve("file.txt")));
+        assertFalse(Files.exists(destDirPath.resolve("file.skip")));
     }
 
     @Test
@@ -279,9 +279,9 @@ public class FileUtilsTest {
     }
 
     @Test
-    void testCopyResourceDirectory(@TempDir Path tempDir) throws Exception {
-        Path targetDir = tempDir.resolve("resourceCopy");
-        FileUtils.copyResourceDirectory("bisq/common/util/", targetDir);
-        assertTrue(Files.exists(targetDir.resolve("FileUtilsTest.class")));
+    void testCopyResourceDirectory(@TempDir Path tempDirPath) throws Exception {
+        Path targetDirPath = tempDirPath.resolve("resourceCopy");
+        FileUtils.copyResourceDirectory("bisq/common/util/", targetDirPath);
+        assertTrue(Files.exists(targetDirPath.resolve("FileUtilsTest.class")));
     }
 }
